<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="app_prefs_cat2"
        android:title="@string/settings_title_cat2" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="chkGps"
            android:summary="@string/settings_location"
            android:title="@string/settings_caption_location" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="chkVuoro"
            android:summary="@string/settings_advance"
            android:title="@string/settings_caption_advance" />
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="chkJarjestys"
            android:summary="@string/settings_order"
            android:title="@string/settings_caption_order" />
        
    </PreferenceCategory>

</PreferenceScreen>