<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="my.domain.app.PrefsActivity$PrefsFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/settings_caption_language" >
        <extra
            android:name="pref-resource"
            android:value="app_prefs_cat1" />
    </header>
    <header
        android:fragment="my.domain.app.PrefsActivity$PrefsFragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/settings_caption_generic" >
        <extra
            android:name="pref-resource"
            android:value="app_prefs_cat2" />
    </header>
    <header
        android:fragment="my.domain.app.PrefsActivity$PrefsFragment"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/settings_caption_htmlsource" >
        <extra
            android:name="pref-resource"
            android:value="app_prefs_cat3" />
    </header>

</preference-headers>